--- a/app/css/lessframework.css
+++ b/app/css/lessframework.css
@@ -1,9 +1,11 @@
 
 @media only screen and (min-width: 768px){
-	.flexnav {width: 100%;}
-	.flexnav li{background: none; border:none; width: 25%;}
-	.flexnav li a{background: none; border:none; text-decoration: none;}
-	.menu_holder{width: 70%; margin-top: 15px; float:left; text-align: right;}
+	.flexnav { text-align: center; }
+	.flexnav li{background: none; border:none; height:115px; display:inline;}
+	.flexnav li:last-child{background: #ED3129;}
+	.flexnav li:last-child a{font-weight: bold;}
+	.flexnav li a{background: none; border:none; text-decoration: none; line-height: 115px; display: inline-block; padding:0 20px;}
+	.menu_holder{width: auto; float:right; text-align: right;}
 	.flexnav .touch-button{top:-2px;right:10px;width: 25px; background: none;}
 	.flexnav li > ul  li{text-align:left; border-bottom:1px solid #ddd;}
 
