--- a/app/style.css
+++ b/app/style.css
@@ -1,6 +1,17 @@
 
+
+@font-face {
+  font-family: 'MuseoSlab-500';
+  src: url('/fonts/MuseoSlab-500.eot?#iefix') format('embedded-opentype'),  url('/fonts/MuseoSlab-500.otf')  format('opentype'),
+	     url('/fonts/MuseoSlab-500.woff') format('woff'), url('/fonts/MuseoSlab-500.ttf')  format('truetype'), url('/fonts/MuseoSlab-500.svg#MuseoSlab-500') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+
 html{overflow-x: hidden;}
-body{overflow-x: hidden;}
+body{overflow-x: hidden; font-family: 'Kanit', sans-serif; font-weight: 900;}
 img{width: 100%;}
 .logo{float: left;display: inline-block; line-height: 115px}
 .logo img{max-width: 185px;}
@@ -36,7 +47,7 @@ img{width: 100%;}
 .home_hero_area{}
 .home_hero_area {background: url('img/colour_layer.png') no-repeat; background-position: left bottom}
 
-
+.blue_with_yellow{}
 
 /* Footer area */
 .footer_area{background: #4A4A4A; color:#fff; text-align: center; padding:10px 0;}
