--- a/app/style.css
+++ b/app/style.css
@@ -17,7 +17,10 @@
 }
 
 .fz_25{font-size: 25px;}
+.fz_30{font-size: 30px;}
+.fz_35{font-size: 35px;}
 .fz_40{font-size: 40px;}
+.fz_45{font-size: 45px;}
 
 .fw_700{font-weight: 700;}
 .fw_900{font-weight: 900;}
@@ -27,6 +30,10 @@
 
 .m_t_25{display: block; margin-top: 25px;}
 .m_b_50{margin-bottom: 50px;}
+
+
+.lh_20{line-height: 20px;}
+.lh_35{line-height: 35px;}
 
 
 .yellow_box_shadow{
@@ -55,7 +62,12 @@
 
 
 .white_text_yellow_bg{
-	background: #FFC20E; display: inline-block; font-size: 30px; line-height: 25px;color:#fff;
+  background: #FFC20E; display: inline-block;color:#fff;
+}
+
+
+.white_text_gray_bg{
+	background: #BCBCBC; display: inline-block;color:#fff;
 }
 
 
@@ -86,8 +98,8 @@
 
 
 .hvr_fade_red {
-	background-color: #ED3129;
-	color:#fff;
+  background-color: #ED3129;
+  color:#fff;
   display: inline-block;
   vertical-align: middle;
   -webkit-transform: translateZ(0);
@@ -106,6 +118,31 @@
   background-color: #fff;
   border:1px solid #ED3129;
   color: #ED3129;
+}
+
+
+
+.hvr_fade_yellow {
+	background-color: #FEC10E;
+	color:#fff;
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: color, background-color;
+  transition-property: color, background-color;
+  border:1px solid transparent;
+}
+.hvr_fade_yellow:hover, .hvr_fade_yellow:focus, .hvr_fade_yellow:active {
+  background-color: #fff;
+  border:1px solid #FEC10E;
+  color: #FEC10E;
 }
 
 
@@ -180,13 +217,7 @@ a:hover{
 
 
 
-/* Footer area */
-.footer_area{background: #4A4A4A; color:#fff; text-align: center; padding:10px 0;}
-.footer_area p{ margin-top: 8px; display: inline;}
-.footer_area .footer_menu{margin-top: 8px; display:inline;}
-.footer_area .footer_menu li{list-style: none;  display: inline-block; border-right:1px solid #fff; }
-.footer_area .footer_menu li:last-child{list-style: none;  display: inline-block; border-right:0px solid #fff; }
-.footer_area .footer_menu li a{display: block; color:#fff; padding:0 10px;}
+
 
 
 
@@ -230,3 +261,73 @@ a:hover{
     text-align: right;
 
 }
+
+/*=================  Eamil Area =================*/
+.email_area{background: #0094D9; padding:125px 0;}
+.email_area input[type="email"]{
+    width: 70%;
+    background: no-repeat;
+    border: 0px;
+    border-bottom: 2px solid #fff;
+    font-size: 20px;
+    color: #fff;
+    font-family: 'MuseoSlab-300';
+    line-height: 40px;
+}
+ .email_area input::-webkit-input-placeholder {
+    color: #fff;
+}
+ .email_area input:-moz-placeholder {
+    /* FF 4-18 */
+    color: #fff;
+}
+ .email_area input::-moz-placeholder {
+    /* FF 19+ */
+    color: #fff;
+}
+ .email_area input:-ms-input-placeholder {
+    /* IE 10+ */
+    color: #fff;
+}
+
+ .email_area input[type="submit"]{
+  padding-left: 20px;
+  padding-right: 20px;
+ }
+/*================= Footer Area =================*/
+.footer_area{padding-top: 65px; padding-bottom: 100px; background: #4A4A4A; color:#fff;} 
+.footer_logo{max-width: 160px}
+.footer_column_heading{margin-bottom: 25px;}
+.footer_links{padding:0; list-style: none;}
+.footer_links li{}
+.footer_links li a{
+    color:#fff;font-family: 'MuseoSlab-300'; 
+    font-weight: 300; 
+    font-size: 17px;
+    -webkit-transition:all 0.2s ease-in; 
+    transition: all 0.2s ease-in;  
+}
+.footer_links li a:hover{margin-left:10px; color:#FFC20E;}
+
+
+/*================= Footer Bottom Area =================*/
+.footer_bottom_area{background: #4A4A4A; }
+.gray_line{
+    border-top: 1px solid #BCBCBC;
+    margin-top: 0;
+    margin-bottom: 0;  
+}
+
+.footer_bottom_area p{
+    color:#fff;
+    font-size: 12px;
+    margin-top: 15px;
+}
+
+
+
+
+
+/*================= =================*/
+/*================= =================*/
+/*================= =================*/
