--- a/app/css/lessframework.css
+++ b/app/css/lessframework.css
@@ -1,10 +1,27 @@
 
+
+
+
+
+@media only screen and (min-width: 768px) and (max-width: 998px) {
+	.menu_holder{width: 100%;}
+	.flexnav{width: 100%; float: none; display: table;}
+	.flexnav li{float: none; display: table-cell;}
+	.flexnav li a{padding:0;}
+
+	.logo{width: 100%; margin-top: 25px; margin-left: 0;}
+	.logo img{display: block; margin: 0 auto;}
+
+}
+
+
+
 @media only screen and (min-width: 768px){
 	.flexnav { text-align: center; }
 	.flexnav li{background: none; border:none; height:115px; display:inline;}
 	.flexnav li:last-child{background: #ED3129;}
 	.flexnav li:last-child a{font-weight: bold;}
-	.flexnav li a{background: none; border:none; text-decoration: none; line-height: 115px; display: inline-block; padding:0 20px; }
+	.flexnav li a{background: none; border:none; text-decoration: none; line-height: 115px; display: inline-block; padding:0 17px; }
 	.menu_holder{width: auto; float:right; text-align: right;}
 	.flexnav .touch-button{top:-2px;right:10px;width: 25px; background: none;}
 	.flexnav li > ul  li{text-align:left; border-bottom:1px solid #ddd;}
@@ -20,12 +37,14 @@
 
 @media only screen and (max-width: 767px){
 	.menu_holder{width: 100%;}
-	.flexnav {width: 100%;}
+	.flexnav {width: 100%;padding-left: 15px;}
 	.flexnav li{width: 100%; text-align: left; }
 	.container{width: 100%; max-width: 100%;}
 	.flexnav li > ul{padding-left: 0;}
 	.menu-button{text-align: left; overflow: hidden; } 
 	.flexnav li a{padding:10px 0; color:#d3531a;background: none; }
+	.logo_menu_button_holder{ overflow: hidden;}
+	.logo{margin-left: 15px;}
 
 
 }
