--- a/app/css/lessframework.css
+++ b/app/css/lessframework.css
@@ -15,6 +15,20 @@
 }
 
 
+@media only screen  and (max-width: 991px) {
+	/* Testimonial Slider */
+	.text_holder {padding-top: 180px; padding-left: 10px; padding-right: 10px;}
+	.testimonial_image_holder {
+	    position: absolute;
+	    top: 10px;
+	    left: 50%;
+	    margin-top: 0;
+	    transform: translateX(-50%);
+	}
+	.testimonial_text{font-size: 20px;text-align: center;}
+	.testimonial_text:before{display: none;}
+	.testimonial_text:after{display: none;}	
+}
 
 @media only screen and (min-width: 768px){
 	.flexnav { text-align: center; }
@@ -25,6 +39,8 @@
 	.menu_holder{width: auto; float:right; text-align: right;}
 	.flexnav .touch-button{top:-2px;right:10px;width: 25px; background: none;}
 	.flexnav li > ul  li{text-align:left; border-bottom:1px solid #ddd;}
+
+	.pad_0_10{padding:0 10%;}
 
 }
 
@@ -45,6 +61,16 @@
 	.flexnav li a{padding:10px 0; color:#d3531a;background: none; }
 	.logo_menu_button_holder{ overflow: hidden;}
 	.logo{margin-left: 15px;}
+	.custom_container{padding: 0 15px;}
+	.home_hero_area{background: none;}
+	.featured_blog_area{margin:25px 0;}
+	.featured_blog_area .col-md-4{padding-top: 25px; padding-bottom: 25px;border-bottom: 2px solid #fff;}
+	.m_m_b_15{margin-bottom: 15px;display: block;}
+
+	.footer_area .row > div{margin-bottom: 20px;}
+
+
+
 
 
 }
@@ -60,11 +86,13 @@
 }
 
 
-
+@media only screen and (min-width: 320px) and (max-width: 566px) {
+	.email_area input[type="submit"]{margin-top: 15px; font-size: 15px;}
+}
 
 @media only screen and (min-width: 320px) and (max-width: 479px) {
 
-
+	.fz_45{font-size: 30px;}
 
 
 
